hphp/test/slow/static-analysis-fatal.php.expectf

Fatal error: static analysis error: supposedly unreachable code was reached in %s/static-analysis-fatal.php on line 5
